--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               </div>
               <div>
                 <h2>Attacks</h2>
-                  <p id="cat-totals"></p>
+                  <p id="hero-totals"></p>
               </div>
             </div>
             <div class="col-md-2">
