added game rules

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <div class="row">
             <div class="col-md-5">
               <h2>Game rules</h2>
+              <p>Each hero has a random number assigned to him. click each hero to attack bowzer. If your attacks equal the number of Princess Rescued, she's saved.</p>
               
             </div>
         
